Fix dragging out of videos on mobile.

--- a/resources/main.scss
+++ b/resources/main.scss
@@ -519,6 +519,7 @@ html.mobile .screen-illust-container {
     > .video-container {
         width: 100%;
         height: 100%;
+        touch-action: none;
     }
 }
 
